Spring/Bank/src/main/java/com/example/demo/errors/LoanDoesntExistsException.java
package com.example.demo.errors;

public class LoanDoesntExistsException extends Exception {

	/**
	 * 
	 */
	private static final long serialVersionUID = 1L;

}
